[package]
name = "selenium-manager"
version = "0.4.31" # don't forget to update rust/BUILD.bazel
edition = "2021"
authors = ["Selenium <selenium-developers@googlegroups.com"]
license = "Apache-2.0"
homepage = "https://www.selenium.dev/"
repository = "https://github.com/SeleniumHQ/selenium"
documentation = "https://www.selenium.dev/documentation/"
description = """
Selenium Manager is a CLI tool that automatically manages the browser/driver infrastructure required by Selenium.
"""

[dependencies]
clap = { version = "4.5.31", features = ["derive", "cargo"] }
log = "0.4.26"
env_logger = "0.11.6"
regex = "1.11.1"
tokio = { version = "1.43.0", default-features = false, features = ["macros", "net", "rt-multi-thread"] }
tempfile = "3.17.1"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
zip = { version = "2.2.3", default-features = false, features = ["deflate-zlib"] }
directories = "6.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
flate2 = "1.1.0"
tar = "0.4.43"
infer = "0.19.0"
exitcode = "1.1.2"
toml = "0.8.20"
bzip2 = "0.5.2"
sevenz-rust = "0.6.1"
xz2 = "0.1.7"
walkdir = "2.5.0"
debpkg = "0.6.0"
anyhow = { version = "1.0.97", default-features = false, features = ["backtrace", "std"] }
apple-flat-package = "0.20.0"
which = "7.0.2"
fs2 = "0.4.3"
fs_extra = "1.3.0"

[dev-dependencies]
assert_cmd = "2.0.16"
is_executable = "1.0.4"
rstest = "0.19.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[profile.dev]
debug = true             # Full debug info
split-debuginfo = 'off'  # Debug info in the final artifact
