load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")

java_test_suite(
    name = "SmallTests",
    size = "medium",
    srcs = glob(["*.java"]),
    deps = [
        "//java/src/org/openqa/selenium:core",
        "//java/src/org/openqa/selenium/events",
        "//java/src/org/openqa/selenium/events/local",
        "//java/src/org/openqa/selenium/grid/data",
        "//java/src/org/openqa/selenium/grid/sessionmap",
        "//java/src/org/openqa/selenium/grid/sessionmap/local",
        "//java/src/org/openqa/selenium/remote",
        "//java/test/org/openqa/selenium/remote/tracing:tracing-support",
        artifact("org.assertj:assertj-core"),
        artifact("org.junit.jupiter:junit-jupiter-api"),
    ] + JUNIT5_DEPS,
)
